@@ -16,6 +16,13 @@
      support -l (print fingerprint) in combination with -F (find host) to
      search for a host in ~/.ssh/known_hosts and display its fingerprint;
      ok markus@
+   - djm@cvs.openbsd.org 2008/05/19 20:53:52
+     [clientloop.c]
+     unbreak tree by committing this bit that I missed from:
+     Fix sending tty modes when stdin is not a tty (bz#1199). Previously
+     we would send the modes corresponding to a zeroed struct termios,
+     whereas we should have been sending an empty list of modes.
+     Based on patch from daniel.ritz AT alcatel.ch; ok dtucker@ markus@ 
 
 20080604
  - (djm) [openbsd-compat/bsd-arc4random.c] Fix math bug that caused bias
@@ -4047,4 +4054,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4941 2008/06/08 02:54:29 dtucker Exp $
+$Id: ChangeLog,v 1.4942 2008/06/08 02:55:32 dtucker Exp $
